# framework-test-at-home

./: .gitignore  README.md  bench.sh  build.sh  raw_output.txt
bun_elysia_pg/: README.md  bun.lockb  index.ts  package.json
go_fiber_pgxpool/: go.mod  go.sum  main.go
go_nethttp_pgxpool/: go.mod  go.sum  main.go
node_fastify_pg/: index.js  package-lock.json  package.json
ruby_rails/: Gemfile
ruby_rails/app/controllers/: application_controller.rb  counters_controller.rb
ruby_rails/app/models/: presence_counter.rb
ruby_rails/config/: application.rb  credentials.yml.enc  database.yml  routes.rb
ruby_rails/config/environments/: production.rb
ruby_rails/db/migrate/: 20240101122539_create_presence_counters.rb
ruby_rails/test/controllers/: counters_controller_test.rb
ruby_rails/test/fixtures/: presence_counters.yml
ruby_rails/test/models/: presence_counter_test.rb
rust_axum_sqlx-postgres/: Cargo.toml
rust_axum_sqlx-postgres/src/: main.rs
rust_axum_tokio-postgres/: Cargo.toml
rust_axum_tokio-postgres-bb8/: Cargo.toml
rust_axum_tokio-postgres-bb8/src/: main.rs
rust_axum_tokio-postgres-bb8_optimized/: Cargo.toml
rust_axum_tokio-postgres-bb8_optimized/src/: database.rs  main.rs  server.rs
rust_axum_tokio-postgres/src/: database.rs  main-10_thread.rs  main-10_thread_current_thread.rs  main.rs
rust_axum_tokio-postgres_arc/: Cargo.toml
rust_axum_tokio-postgres_arc/src/: main.rs
rust_axum_tokio-postgres_bb8/: Cargo.toml
rust_axum_tokio-postgres_bb8/src/: main.rs
rust_axum_tokio-postgres_old/src/: main.rs
rust_axum_tokio-postgres_prefork/: Cargo.toml
rust_axum_tokio-postgres_prefork/src/: main.rs
rust_axum_tokio-postgres_tech-empower/: Cargo.toml
rust_axum_tokio-postgres_tech-empower/src/: main.rs  server.rs
