[package]
name = "rust_axum_sqlx-postgres"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.3", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.35.1", features = ["full"] }

sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres"] }
