[package]
name = "axum"
version = "0.2.0"
authors = ["Dragos Varovici <dvarovici.work@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.6.20", default-features = false, features = ["http1", "tokio"] }
hyper = { version = "0.14.28", features = ["http1", "server"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"

[profile.release]
lto = true
codegen-units = 1
