[package]
name = "axum"
version = "0.2.0"
authors = ["Dragos Varovici <dvarovici.work@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.7.3", default-features = false, features = ["http1", "tokio"] }
hyper = { version = "1.1.0", features = ["http1"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"

[profile.release]
lto = true
codegen-units = 1
