[package]
name = "axum"
version = "0.2.0"
authors = ["Greg Nagy<greg@dhamma.works>"]
edition = "2021"

[[bin]]
name = "axum"
path = "src/main.rs"

[[bin]]
name = "axum-10"
path = "src/main-10_thread.rs"

[[bin]]
name = "axum-10-current"
path = "src/main-10_thread_current_thread.rs"

[dependencies]
axum = { version = "0.7.3", default-features = false, features = ["http1", "tokio"] }
hyper = { version = "1.1.0", features = ["http1", "server"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"

[profile.release]
lto = true
codegen-units = 1
