[package]
name = "rust_axum_tokio-postgres_bb8"
version = "0.1.0"
authors = ["Greg Nagy <greg@dhamma.works>"]
edition = "2021"

[dependencies]
axum = { version = "0.7.2", default-features = false, features = ["http1", "tokio"] }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
tokio = { version = "1.35.1", features = ["full"] }
