[package]
name = "rust_axum_tokio-postgres_tech-empower"
version = "0.2.0"
authors = ["Dragos Varovici <dvarovici.work@gmail.com>"]
edition = "2021"

[dependencies]
axum = { version = "0.6.16", default-features = false, features = ["http1", "tokio"] }
futures = "0.3.25"
futures-util = "0.3.25"
hyper = { version = "0.14.23", features = ["http1", "server"] }
num_cpus = "1.14.0"
tokio = { version = "1.24.2", features = ["full"] }
tokio-postgres = "0.7.7"

[profile.release]
lto = true
codegen-units = 1
